--- a/OpenIso8583Net/OpenIso8583Net.csproj
+++ b/OpenIso8583Net/OpenIso8583Net.csproj
@@ -72,6 +72,7 @@
     <Compile Include="FieldValidator\Track2FieldValidator.cs" />
     <Compile Include="HashtableMessage.cs" />
     <Compile Include="IField.cs" />
+    <Compile Include="IFieldDescriptor.cs" />
     <Compile Include="LengthFormatters\FixedLengthFormatter.cs" />
     <Compile Include="LengthFormatters\ILengthFormatter.cs" />
     <Compile Include="IMessage.cs" />
@@ -98,6 +99,6 @@
   <Target Name="BeforeBuild">
     <AssemblyInfo CodeLanguage="CS" OutputFile="Properties\AssemblyInfo.cs" AssemblyTitle="OpenIso8583.Net" AssemblyDescription="ISO8583 Message Builder" AssemblyConfiguration="" AssemblyCompany="John Oxley" AssemblyProduct="OpenIso8583.Net" AssemblyCopyright="Copyright © John Oxley 2011" AssemblyTrademark="" AssemblyCulture="" ComVisible="false" Guid="dad698b7-4ada-4f02-8446-12fe960fa2e1" AssemblyVersion="$(Major).$(Minor).$(Build).$(Revision)" AssemblyFileVersion="$(Major).$(Minor).$(Build).$(Revision)" Condition="$(Revision) != '0' " />
     <MSBuild.ExtensionPack.Xml.XmlFile TaskAction="UpdateElement" File="$(SolutionDir)tools\OpenIso8583Net.nuspec" XPath="/package/metadata/version" InnerText="$(Major).$(Minor).$(Build)" />
-	<Message Text="Version $(Major).$(Minor).$(Build)" />
+    <Message Text="Version $(Major).$(Minor).$(Build)" />
   </Target>
 </Project>
