--- a/OpenIso8583Net/OpenIso8583Net.csproj
+++ b/OpenIso8583Net/OpenIso8583Net.csproj
@@ -85,6 +85,7 @@
     <Compile Include="LengthValidators\VariableLengthValidator.cs" />
     <Compile Include="NetworkHeaders\INetworkHeader.cs" />
     <Compile Include="NetworkHeaders\TwoByteHeader.cs" />
+    <Compile Include="PanMaskDecorator.cs" />
     <Compile Include="ProcessingCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Template.cs" />
