--- a/OpenIso8583Net/OpenIso8583Net.csproj
+++ b/OpenIso8583Net/OpenIso8583Net.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalAmount.cs" />
+    <Compile Include="EuropayMessage.cs" />
     <Compile Include="Exceptions\FieldDescriptorException.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="AMessage.cs" />
@@ -54,13 +55,14 @@
     <Compile Include="Exceptions\FormatException.cs" />
     <Compile Include="Exceptions\UnknownFieldException.cs" />
     <Compile Include="FieldDescriptor.cs" />
+    <Compile Include="FieldValidator\AlphaNumericFieldValidator.cs" />
     <Compile Include="Formatter\AsciiFormatter.cs" />
     <Compile Include="Formatter\BcdFormatter.cs" />
     <Compile Include="Formatter\BinaryFormatter.cs" />
     <Compile Include="Formatter\Formatters.cs" />
     <Compile Include="Formatter\IFormatter.cs" />
     <Compile Include="FieldValidator\AlphaFieldValidator.cs" />
-    <Compile Include="FieldValidator\AlphaNumericFieldValidator.cs" />
+    <Compile Include="FieldValidator\AlphaNumericAndSpaceFieldValidator.cs" />
     <Compile Include="FieldValidator\AlphaNumericPrintableFieldValidator.cs" />
     <Compile Include="FieldValidator\AlphaNumericSpecialFieldValidator.cs" />
     <Compile Include="FieldValidator\FieldValidators.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="FieldValidator\Rev87AmountFieldValidator.cs" />
     <Compile Include="FieldValidator\Track2FieldValidator.cs" />
     <Compile Include="HashtableMessage.cs" />
+    <Compile Include="Adjuster.cs" />
     <Compile Include="IField.cs" />
     <Compile Include="IFieldDescriptor.cs" />
     <Compile Include="LengthFormatters\FixedLengthFormatter.cs" />
@@ -83,6 +86,7 @@
     <Compile Include="LengthValidators\FixedLengthValidator.cs" />
     <Compile Include="LengthValidators\ILengthValidator.cs" />
     <Compile Include="LengthValidators\VariableLengthValidator.cs" />
+    <Compile Include="LambdaAdjuster.cs" />
     <Compile Include="NetworkHeaders\INetworkHeader.cs" />
     <Compile Include="NetworkHeaders\TwoByteHeader.cs" />
     <Compile Include="PanMaskDecorator.cs" />
