Fixed issue 6 regarding unpacking BCD fields

--- a/OpenIso8583Net.Tests/OpenIso8583Net.Tests.csproj
+++ b/OpenIso8583Net.Tests/OpenIso8583Net.Tests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalAmountTest.cs" />
+    <Compile Include="BcdFieldTests.cs" />
     <Compile Include="BcdFixedFieldTest.cs" />
     <Compile Include="BcdFormatterTests.cs" />
     <Compile Include="BcdVariableFieldTests.cs" />
