--- a/OpenIso8583Net.Tests/OpenIso8583Net.Tests.csproj
+++ b/OpenIso8583Net.Tests/OpenIso8583Net.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FixedFieldTests.cs" />
     <Compile Include="FixedLengthValidatorTests.cs" />
     <Compile Include="HashtableMessageTest.cs" />
+    <Compile Include="Iso8583BinaryMsgTypeTests.cs" />
     <Compile Include="Iso8583Rev93Tests.cs" />
     <Compile Include="Iso8583Tests.cs" />
     <Compile Include="IsoConvertTests.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="NetworkHeaders\TestTwoByteHeader.cs" />
     <Compile Include="ProcessingCodeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMessages\IsoMsgBinaryMsgTypeFormatter.cs" />
     <Compile Include="UtilsTest.cs" />
     <Compile Include="ValidatorTests\AlphaNumericPrintableValidatorTests.cs" />
     <Compile Include="ValidatorTests\AlphaNumericSpecialValidatorTests.cs" />
