--- a/OpenIso8583Net/OpenIso8583Net.csproj
+++ b/OpenIso8583Net/OpenIso8583Net.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\OpenIso8583Net.XML</DocumentationFile>
     <PostBuildEvent>
-		nuget pack -BasePath "$(SolutionDir)OpenIso8583Net" -OutputDirectory "$(SolutionDir)OpenIso8583Net\bin\Release" "$(SolutionDir)tools\OpenIso8583Net.nuspec"
+      nuget pack -BasePath "$(SolutionDir)OpenIso8583Net" -OutputDirectory "$(SolutionDir)OpenIso8583Net\bin\Release" "$(SolutionDir)tools\OpenIso8583Net.nuspec"
     </PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
@@ -100,28 +100,39 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Import Project="$(SolutionDir)Version.proj" />
+  
   <Target Name="BeforeBuild">
-	<Message Text="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
-	<AssemblyInfo 
-		CodeLanguage="CS"
-		OutputFile="$(ProjectDir)Properties/AssemblyInfo.cs" 
-		AssemblyTitle="OpenIso8583.Net"
-		AssemblyDescription="ISO8583 Message Builder" 
-		AssemblyConfiguration=""
-		AssemblyCompany="John Oxley" 
-		AssemblyProduct="OpenIso8583.Net"
-		AssemblyCopyright="Copyright © John Oxley 2011" 
-		AssemblyTrademark=""
-		AssemblyCulture=""
-		ComVisible="false"
-		Guid="dad698b7-4ada-4f02-8446-12fe960fa2e1" 
-		AssemblyVersion="$(Major).$(Minor).$(Build).$(Revision)" 
-		AssemblyFileVersion="$(Major).$(Minor).$(Build).$(Revision)" />
-	 <XmlUpdate
-		Prefix="p"
-		Namespace="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"
-		XmlFileName="$(SolutionDir)tools\OpenIso8583Net.nuspec"
-		XPath="/p:package/p:metadata/p:version"
-		Value="$(Major).$(Minor).$(Build)" />
+    <AssemblyInfo
+      CodeLanguage="CS"
+      OutputFile="$(ProjectDir)Properties/AssemblyInfo.cs"
+      AssemblyTitle="OpenIso8583.Net"
+      AssemblyDescription="ISO8583 Message Builder"
+      AssemblyConfiguration=""
+      AssemblyCompany="John Oxley"
+      AssemblyProduct="OpenIso8583.Net"
+      AssemblyCopyright="Copyright © John Oxley 2011"
+      AssemblyTrademark=""
+      AssemblyCulture=""
+      ComVisible="false"
+      Guid="dad698b7-4ada-4f02-8446-12fe960fa2e1"
+      AssemblyVersion="$(Major).$(Minor).$(Build).$(Revision)"
+      AssemblyFileVersion="$(Major).$(Minor).$(Build).$(Revision)" />
+    <XmlUpdate
+     Prefix="p"
+     Namespace="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"
+     XmlFileName="$(SolutionDir)tools\OpenIso8583Net.nuspec"
+     XPath="/p:package/p:metadata/p:version"
+     Value="$(Major).$(Minor).$(Build)" />
+  </Target>
+  <Target Name="AfterBuild" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <ItemGroup>
+      <ReleaseFiles Include="bin/$(Configuration)/OpenIso8583Net.dll" />
+      <ReleaseFiles Include="bin/$(Configuration)/OpenIso8583Net.pdb" />
+      <ReleaseFiles Include="bin/$(Configuration)/OpenIso8583Net.xml" />
+    </ItemGroup>
+    <Zip Files="@(ReleaseFiles)"
+         Flatten="true"
+         WorkingDirectory="bin\$(Configuration)"
+         ZipFileName="bin\$(Configuration)\OpenIso8583.Net.v$(Major).$(Minor).$(Build).zip" />
   </Target>
 </Project>
